# IFC2JSON_python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
file_converters/ifcjson/: __init__.py  ifc2json4.py  ifc2json5a.py  reader.py  to_ifcopenshell.py
file_converters/tests/: test_samples.py
samples/input/Georeferencing_1/: UT_GeoRef_1.ifc  UT_GeoRef_1.json  UT_GeoRef_1_roundtrip.json
samples/output/Georeferencing_1/: UT_GeoRef_1.json  UT_GeoRef_1_ifcopenshell.ifc  UT_GeoRef_1_roundtrip.ifc  UT_GeoRef_1_roundtrip.json  UT_GeoRef_1_roundtrip_roundtrip.json  UT_GeoRef_1_roundtrip_roundtrip_ifcopenshell.ifc
samples/output/IFC 2x3/: 7m900_tue_hello_wall_with_door.json  7m900_tue_hello_wall_with_door_ifcopenshell.ifc  7m900_tue_hello_wall_with_door_roundtrip.ifc  Duplex_A_20110907_optimized_ifcopenshell.ifc  Duplex_A_20110907_optimized_roundtrip.ifc
samples/output/IFC 4.0/BuildingSMARTSpec/: air-terminal-element.json  air-terminal-element_ifcopenshell.ifc  air-terminal-element_roundtrip.ifc  air-terminal-library-object.json  air-terminal-library-object_ifcopenshell.ifc  air-terminal-library-object_roundtrip.ifc  basin-advanced-brep.json  basin-advanced-brep_ifcopenshell.ifc  basin-advanced-brep_roundtrip.ifc  basin-faceted-brep.json  basin-faceted-brep_ifcopenshell.ifc  basin-faceted-brep_roundtrip.ifc  basin-tessellation.json  basin-tessellation_ifcopenshell.ifc  basin-tessellation_roundtrip.ifc  bath-csg-solid.json  bath-csg-solid_ifcopenshell.ifc  bath-csg-solid_roundtrip.ifc  beam-curved-i-shape-tessellated.json  beam-extruded-solid.json  (+102 more)
(+34 files in other folders)
